--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="icon" href="resources/image/avatar.png">
-		<link rel="stylesheet" type="text/css" href="resources/css/estyle.css" />
+		<link rel="stylesheet" type="text/css" href="resources/css/style.css" />
 		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
 		<script type="text/javascript" src="resources/js/jquery-3.6.0.js"></script>
 		<script type="text/javascript" src="resources/js/script.js"></script>
