--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<button>DESCARGAR PORTFOLIO</button>
 			</div>
 
-			<img src="resources/image/avatar.png">
+			<img src="https://i.imgur.com/Bgy4glr.png">
 		</div>
 
 
