--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<div class="borderB-img-info"></div>
 				<div class="borderC-img-info"></div>
 				<div class="borderD-img-info"></div>
-				<img src="resources/image/avatar.png">
+				<img src="https://i.imgur.com/Bgy4glr.png">
 			</div>
 			
 			<div class="content-info">
