--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 		<link rel="icon" href="resources/image/avatar.png">
 		<link rel="stylesheet" type="text/css" href="resources/css/style.css" />
 		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
-		<script type="text/javascript" src="resources/js/jquery-3.6.0.js"></script>
+		<link href="//db.onlinewebfonts.com/c/4124a6204d35abaf22db32c19d62d73e?family=Insaniburger" rel="stylesheet" type="text/css"/>
+		<script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 		<script type="text/javascript" src="resources/js/script.js"></script>
 		<title>Rodrigo Paz - Portfolio Web</title>
 	</head>
