--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 			<!-- BOTÓN OCULTO EN DISPOSITIVOS PEQUEÑOS -->
 			<div class="button-header">
-				<button><a href="mantto.html">DESCARGAR PORTFOLIO</a></button>
+				<button><a href="mantto.php">DESCARGAR PORTFOLIO</a></button>
 			</div>
 
 			<!--<img src="resources/image/avatar.png">-->			<!-- PARA DESARROLLO -->
