--- a/mantto.html
+++ b/mantto.html
@@ -5,14 +5,16 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<!-- PARA DESARROLLO -->
-    <!--
-      <link rel="icon" href="resources/image/avatar.png">
-      <link rel="stylesheet" type="text/css" href="resources/css/style-mantto.css">
-    -->
+		<!--
+			<link rel="icon" href="resources/image/avatar.png">
+		      	<link rel="stylesheet" type="text/css" href="resources/css/style-mantto.css">
+		-->
 
 		<!-- PARA PRODUCCIÓN -->
-    <link rel="icon" href="https://i.imgur.com/Bgy4glr.png">
-    <link rel="stylesheet" type="text/css" href="resources/css/style-mantto.css">
+    		<link rel="icon" href="https://i.imgur.com/Bgy4glr.png">
+    		<link rel="stylesheet" type="text/css" href="resources/css/style-mantto.css">
+		<link href="//db.onlinewebfonts.com/c/4124a6204d35abaf22db32c19d62d73e?family=Insaniburger" rel="stylesheet" type="text/css"/>
+		<link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&display=swap" rel="stylesheet">
 
 		<title>Rodrigo Paz - Portfolio Web</title>
 	</head>
